--- a/src/Styles/Partials/sectionContatos.module.css
+++ b/src/Styles/Partials/sectionContatos.module.css
@@ -1,7 +1,7 @@
 .Contatos {
   position: relative;
   width: 100%;
-  height: 1510px;
+  height: 1732px;
 
   background: var(--Preto);
 
@@ -70,110 +70,127 @@
   }
 }
 
-.CardsContainer {
+.cardsContainer {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding: 0px;
-  gap: 24px;
+  gap: 40px;
 
   position: absolute;
-  width: calc(100% - 16px);
+  width: 340px;
   height: auto;
-  left: calc(50% - (100% - 16px) / 2);
-  top: 690px;
-}
+  left: calc(50% - 340px / 2);
+  top: 679px;
 
-.ContactCard {
-  position: relative;
-  border-radius: 16px;
-  justify-content: center;
-  align-items: center;
-  display: flex;
+  & .card {
+    width: 340px;
+    height: 293px;
 
-  background: linear-gradient(135deg, #f0ede624, #f0ede600 72%);
-  box-shadow: 73px 44px 34px rgba(33, 33, 33, 0.01),
-    41px 25px 29px rgba(33, 33, 33, 0.03), 18px 11px 21px rgba(33, 33, 33, 0.04),
-    5px 3px 12px rgba(33, 33, 33, 0.05);
+    background: linear-gradient(100.41deg, #070707 0%, #101010 100%);
+    border-radius: 32px 0px 32px 32px;
 
-  width: 100%;
-  height: 220px;
-  border-radius: 22px;
-
-  & .CardContent {
-    box-sizing: border-box;
-
-    width: 98%;
-    height: 98%;
-
-    background: linear-gradient(100.41deg, #050506 0%, #101010 100%);
-    border-radius: 20px;
-    cursor: pointer;
     overflow: hidden;
 
-    & .IconBox {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      padding: 9.75px;
-      gap: 9.75px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
 
+    & .iconContainer {
       position: relative;
-      width: 52px;
-      height: 52px;
-      left: 16px;
-      top: 16px;
+      width: 105px;
+      height: 106px;
+      left: 235px;
+      top: 0px;
 
-      background: linear-gradient(135deg, #066fd5 0%, #003fff 100%);
-      box-shadow: 0px 22.2857px 9.28571px rgba(4, 99, 223, 0.01),
-        0px 13px 7.42857px rgba(4, 99, 223, 0.05),
-        0px 5.57143px 5.57143px rgba(4, 99, 223, 0.09),
-        0px 1.85714px 3.71429px rgba(4, 99, 223, 0.1);
-      border-radius: 13px;
+      overflow: hidden;
+
+      & .iconBg {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 22.3174px;
+        gap: 22.32px;
+
+        position: absolute;
+        width: 63px;
+        height: 63px;
+        left: 39px;
+        top: 4px;
+
+        z-index: 1;
+
+        background: radial-gradient(71.4% 51.16% at 50% 50%,
+            #f0ede6 0%,
+            #ddd7c9 100%);
+        border-radius: 50%;
+
+        & img {
+          width: 18.37px;
+          height: 18.37px;
+
+          flex: none;
+          order: 0;
+          flex-grow: 0;
+        }
+      }
+
+      & .subtract {
+        position: absolute;
+        width: 105px;
+        height: 106px;
+        right: 0px;
+        top: 0px;
+      }
     }
 
-    & .CardInfo {
+    & .cardInfo {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 0px;
+      gap: 52px;
+
       position: relative;
-      width: 90%;
+      width: 259px;
       height: auto;
-      left: 16px;
-      top: 35px;
+      left: 29px;
+      top: -65px;
 
-      font-family: var(--font-poppins);
-      font-style: normal;
-      font-weight: 400;
-      font-size: 16px;
-      line-height: 22px;
+      & img {
+        width: auto;
+        height: 93.5px;
 
-      color: var(--Cinza-Claro);
+        mix-blend-mode: overlay;
+
+        flex: none;
+        order: 0;
+        flex-grow: 0;
+      }
+
+      & h1 {
+        width: 100%;
+        height: auto;
+
+        font-family: var(--font-poppins);
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 20px;
+
+
+        background: linear-gradient(90deg, #afafaf38 5%, #AFAFAF 50%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        text-fill-color: transparent;
+
+        flex: none;
+        order: 1;
+        align-self: stretch;
+        flex-grow: 0;
+      }
     }
-
-    & .ArrowCircle {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 9.3739px;
-      gap: 9.37px;
-
-      position: relative;
-      top: 55px;
-      left: 325px;
-      width: 32px;
-      height: 32px;
-
-      background: radial-gradient(
-        71.4% 51.16% at 50% 50%,
-        #f0ede6 0%,
-        #ddd7c9 100%
-      );
-      border: 0.5px solid rgba(5, 5, 6, 0.2);
-      border-radius: 100%;
-    }
-  }
-
-  & .CardContent:hover {
-    background: linear-gradient(145deg, #101010 0%, #0a0a0b 100%);
   }
 }
 
@@ -183,7 +200,7 @@
 
 @media (min-width: 768px) and (max-width: 1023px) {
   .Contatos {
-    height: 1510px;
+    height: 1480px;
   }
 
   .textContainer {
@@ -199,42 +216,27 @@
     }
   }
 
-  .CardsContainer {
-    gap: 24px;
+  .cardsContainer {
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    align-content: flex-start;
+    padding: 0px;
+    gap: 54px 44px;
 
-    width: calc(100% - 425px);
-    left: 72px;
-    top: 685px;
-  }
-
-  .ContactCard {
     position: relative;
-    border-radius: 16px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
+    width: 724px;
+    height: auto;
 
-    & .CardContent {
-      box-sizing: border-box;
-
-      & .CardInfo {
-        width: 85%;
-        left: 16px;
-        top: 35px;
-      }
-
-      & .ArrowCircle {
-        top: 55px;
-        left: 355px;
-      }
-    }
+    left: 72px;
+    top: 705px;
   }
 }
 
 /* DESKTOP / NOTEBOOK (≥1024px) */
 @media (min-width: 1280px) {
   .Contatos {
-    height: 1280px;
+    height: 1460px;
   }
 
   .textContainer {
@@ -254,47 +256,20 @@
     }
   }
 
-  .CardsContainer {
+  .cardsContainer {
     flex-direction: row;
     flex-wrap: wrap;
     align-items: flex-start;
     align-content: flex-start;
     padding: 0px;
-    gap: 24px 40px;
+    gap: 54px 44px;
 
-    width: calc(100% - 400px);
-    left: 95px;
-    top: 685px;
-  }
-
-  .ContactCard {
     position: relative;
-    border-radius: 16px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
+    width: 724px;
+    height: auto;
 
-    width: 420px;
-    border-radius: 22px;
-
-    & .CardContent {
-      box-sizing: border-box;
-
-      width: 98%;
-      height: 98%;
-
-      & .CardInfo {
-        width: 80%;
-        height: auto;
-        left: 16px;
-        top: 35px;
-      }
-
-      & .ArrowCircle {
-        top: -105px;
-        left: 365px;
-      }
-    }
+    left: 95px;
+    top: 705px;
   }
 }
 
@@ -302,7 +277,7 @@
 
 @media (min-width: 1700px) {
   .Contatos {
-    height: 1320px;
+    height: 1240px;
   }
 
   .textContainer {
@@ -322,45 +297,16 @@
     }
   }
 
-  .CardsContainer {
+  .cardsContainer {
     flex-direction: row;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    align-content: flex-start;
-    padding: 0px;
-    gap: 24px 40px;
-
-    width: calc(100% - 980px);
-    left: 95px;
-    top: 750px;
-  }
-
-  .ContactCard {
-    position: relative;
-    border-radius: 16px;
-    justify-content: center;
     align-items: center;
-    display: flex;
+    padding: 0px;
+    gap: 52px;
 
-    width: 420px;
-    border-radius: 22px;
-
-    & .CardContent {
-      box-sizing: border-box;
-
-      width: 98%;
-      height: 98%;
-
-      & .CardInfo {
-        width: 80%;
-        left: 16px;
-        top: 35px;
-      }
-
-      & .ArrowCircle {
-        top: -105px;
-        left: 365px;
-      }
-    }
+    position: absolute;
+    width: auto;
+    height: 293px;
+    left: 105px;
+    top: 751px;
   }
 }
