--- a/src/Styles/Partials/sectionSobre.module.css
+++ b/src/Styles/Partials/sectionSobre.module.css
@@ -1,11 +1,59 @@
 .Sobre {
   position: relative;
   width: 100%;
-  height: 1105px;
+  height: 1545px;
 
   background: var(--Branco);
 
   overflow: hidden;
+}
+
+.SubTittle {
+  width: 100%;
+  height: auto;
+  top: 236px;
+  left: 16px;
+  position: absolute;
+
+  font-family: var(--font-poppins);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 47px;
+
+  align-items: center;
+  text-transform: uppercase;
+
+  color: var(--Preto);
+
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+
+  & span {
+    color: var(--Azul-Claro);
+  }
+}
+
+.FotoPerfil {
+  width: calc(100% - 16px);
+  height: 356px;
+  position: absolute;
+
+  top: 390px;
+  left: calc(50% - (100% - 16px) / 2);
+
+  overflow: hidden;
+
+  border-radius: 16px;
+
+  & img {
+    position: absolute;
+    width: 386.25px;
+    height: 515px;
+    left: calc(50% - 386.25px / 2 + 0.3px);
+    top: -66.8px;
+  }
 }
 
 .Container {
@@ -13,37 +61,38 @@
   flex-direction: column;
   align-items: flex-start;
   padding: 0px;
-  gap: 35px;
+  gap: 44px;
 
   position: absolute;
-  width: calc(100% - 16px);
+  width: calc(100% - 8px);
   height: auto;
-  left: calc(50% - (100% - 16px) / 2);
-  top: 236px;
+  left: calc(50% - (100% - 8px) / 2);
+  top: 808px;
 
   & .Text {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-end;
     padding: 0px;
-    gap: 20px;
+    gap: 16px;
 
     width: 100%;
     height: auto;
 
     flex: none;
     order: 0;
+    align-self: stretch;
     flex-grow: 0;
 
-    & h1 {
+    & h2 {
       width: 100%;
-      height: auto;
+      height: 60px;
 
       font-family: var(--font-poppins);
       font-style: normal;
       font-weight: 500;
-      font-size: 36px;
-      line-height: 47px;
+      font-size: 48px;
+      line-height: 60px;
 
       align-items: center;
       text-transform: uppercase;
@@ -52,22 +101,25 @@
 
       flex: none;
       order: 0;
+      align-self: stretch;
       flex-grow: 0;
 
       & span {
         color: var(--Azul-Claro);
+        font-weight: 600;
       }
     }
 
-    & h2 {
+    & p {
       width: 100%;
       height: auto;
 
       font-family: var(--font-poppins);
       font-style: normal;
-      font-weight: 400;
+      font-weight: 500;
       font-size: 20px;
-      line-height: 30px;
+      line-height: 32px;
+
       display: flex;
       align-items: center;
 
@@ -75,80 +127,180 @@
 
       flex: none;
       order: 1;
+      align-self: stretch;
       flex-grow: 0;
     }
   }
 
-  & .ButtonCV {
+  & .ButtonsContainer {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
-    padding: 12px 28px 12px 12px;
-    gap: 10px;
-    position: relative;
+    padding: 0px;
+    gap: 12px;
 
-    width: 342.75px;
+    width: 100%;
     height: 54.75px;
 
-    background: linear-gradient(180deg, #007aff 0%, #003fff 100.64%);
-    box-shadow: 0px 32px 13px rgba(1, 69, 255, 0.02),
-      0px 18px 11px rgba(1, 69, 255, 0.06), 0px 8px 8px rgba(1, 69, 255, 0.1),
-      0px 2px 4px rgba(1, 69, 255, 0.12);
-    border-radius: 32px;
-    border: none;
-
     flex: none;
     order: 1;
     flex-grow: 0;
 
-    font-family: var(--font-plus);
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 25px;
-    text-align: center;
-    text-transform: uppercase;
-
-    color: var(--Branco);
-
-    flex: none;
-    order: 1;
-    flex-grow: 0;
-
-    transition: background 0.3s ease, box-shadow 0.3s ease;
-    overflow: hidden;
-
-    & .IconCV {
+    & .ButtonCV {
       display: flex;
       flex-direction: row;
       justify-content: center;
       align-items: center;
-      padding: 9.3739px;
-      gap: 9.37px;
+      padding: 12px 20px 12px 12px;
+      gap: 10px;
+      position: relative;
 
-      width: 30.75px;
-      height: 30.75px;
+      width: auto;
+      height: 54.75px;
 
-      background: radial-gradient(
-        71.4% 51.16% at 50% 50%,
-        #f0ede6 0%,
-        #ddd7c9 100%
-      );
-      border: 0.5px solid rgba(5, 5, 6, 0.2);
-      border-radius: 100%;
+      background: linear-gradient(180deg, #007aff 0%, #003fff 100.64%);
+      box-shadow:
+        0px 32px 13px rgba(1, 69, 255, 0.02),
+        0px 18px 11px rgba(1, 69, 255, 0.06),
+        0px 8px 8px rgba(1, 69, 255, 0.1),
+        0px 2px 4px rgba(1, 69, 255, 0.12);
+      border-radius: 32px;
+      border: none;
+      cursor: pointer;
 
       flex: none;
-      order: 0;
+      order: 1;
       flex-grow: 0;
 
-      & img {
-        width: auto;
-        height: 12px;
+      font-family: var(--font-plus);
+      font-style: normal;
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 25px;
+      text-align: center;
+      text-transform: uppercase;
+
+      color: var(--Branco);
+
+      flex: none;
+      order: 1;
+      flex-grow: 0;
+
+      transition:
+        background 0.3s ease,
+        box-shadow 0.3s ease;
+      overflow: hidden;
+
+      & .IconCV {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 9.3739px;
+        gap: 9.37px;
+
+        width: 30.75px;
+        height: 30.75px;
+
+        background: radial-gradient(
+          71.4% 51.16% at 50% 50%,
+          #f0ede6 0%,
+          #ddd7c9 100%
+        );
+        border: 0.5px solid rgba(5, 5, 6, 0.2);
+        border-radius: 100%;
 
         flex: none;
         order: 0;
         flex-grow: 0;
+
+        & img {
+          width: auto;
+          height: 12px;
+
+          flex: none;
+          order: 0;
+          flex-grow: 0;
+        }
+      }
+    }
+
+    & .BtnLinkedin {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      padding: 12px 20px 12px 12px;
+      gap: 10px;
+      position: relative;
+
+      width: auto;
+      height: 54.75px;
+
+      background: linear-gradient(180deg, #f0ede6 0%, #ddd7c9 100.64%);
+      box-shadow:
+        0px 32px 13px rgba(128, 128, 128, 0.02),
+        0px 18px 11px rgba(128, 128, 128, 0.06),
+        0px 8px 8px rgba(128, 128, 128, 0.1),
+        0px 2px 4px rgba(128, 128, 128, 0.12);
+      border-radius: 32px;
+      border: none;
+      cursor: pointer;
+
+      flex: none;
+      order: 1;
+      flex-grow: 0;
+
+      font-family: var(--font-plus);
+      font-style: normal;
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 25px;
+      text-align: center;
+      text-transform: uppercase;
+
+      color: var(--Preto);
+
+      flex: none;
+      order: 1;
+      flex-grow: 0;
+
+      transition:
+        background 0.3s ease,
+        box-shadow 0.3s ease;
+      overflow: hidden;
+
+      & .IconLinkedin {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 9.3739px;
+        gap: 9.37px;
+
+        width: 30.75px;
+        height: 30.75px;
+
+        background: radial-gradient(
+          71.4% 51.16% at 50% 50%,
+          #007aff 0%,
+          #003fff 100%
+        );
+        border: 0.5px solid rgba(0, 0, 101, 0.2);
+        border-radius: 100%;
+
+        flex: none;
+        order: 0;
+        flex-grow: 0;
+
+        & img {
+          width: auto;
+          height: 12px;
+
+          flex: none;
+          order: 0;
+          flex-grow: 0;
+        }
       }
     }
   }
@@ -171,7 +323,25 @@
   opacity: 0;
 }
 
-.ButtonCV:hover::before {
+.BtnLinkedin::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -75%;
+  width: 50%;
+  height: 100%;
+  background: linear-gradient(
+    120deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(216, 218, 228, 0.4) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  transform: skewX(-20deg);
+  opacity: 0;
+}
+
+.ButtonCV:hover::before,
+.BtnLinkedin:hover::before {
   animation: shine 1.5s infinite;
   opacity: 1;
 }
@@ -192,24 +362,41 @@
 
 @media (min-width: 768px) and (max-width: 1023px) {
   .Sobre {
-    height: 1005px;
+    height: 1505px;
+  }
+
+  .SubTittle {
+    width: calc(100% - 320px);
+    top: 286px;
+    left: 72px;
+
+    font-size: 42px;
+    line-height: 53px;
+  }
+
+  .FotoPerfil {
+    width: calc(100% - 360px);
+    height: 420px;
+
+    top: 450px;
+    left: 72px;
+
+    border-radius: 24px;
+
+    & img {
+      width: 494px;
+      height: 658px;
+      left: calc(50% - 494px / 2 + 0.41px);
+      top: -86px;
+    }
   }
 
   .Container {
-    gap: 35px;
+    gap: 44px;
 
-    width: calc(100% - 320px);
+    width: calc(100% - 260px);
     left: 72px;
-    top: 252px;
-
-    & .Text {
-      gap: 20px;
-
-      & h1 {
-        font-size: 42px;
-        line-height: 53px;
-      }
-    }
+    top: 940px;
   }
 }
 
@@ -217,22 +404,47 @@
 
 @media (min-width: 1280px) {
   .Sobre {
-    height: 955px;
+    height: 1165px;
+  }
+
+  .SubTittle {
+    width: calc(100% - 680px);
+    top: 286px;
+    left: 95px;
+
+    font-size: 52px;
+    line-height: 63px;
+  }
+
+  .FotoPerfil {
+    width: calc(100% - 760px);
+    height: 480px;
+
+    top: 480px;
+    left: 95px;
+
+    border-radius: 24px;
+
+    & img {
+      width: 533px;
+      height: 711px;
+      left: calc(50% - 533px / 2 + 0.5px);
+      top: -81px;
+    }
   }
 
   .Container {
-    gap: 35px;
+    gap: 36px;
 
-    width: calc(100% - 660px);
-    left: 95px;
-    top: 272px;
+    width: calc(100% - 720px);
+    left: 640px;
+    top: 480px;
 
     & .Text {
-      gap: 20px;
+      gap: 12px;
 
-      & h1 {
-        font-size: 52px;
-        line-height: 63px;
+      & p {
+        width: 95%;
       }
     }
   }
@@ -242,23 +454,44 @@
 
 @media (min-width: 1700px) {
   .Sobre {
-    height: 955px;
+    height: 1330px;
+  }
+
+  .SubTittle {
+    width: calc(100% - 980px);
+    top: 272px;
+    left: 225px;
+
+    font-size: 76px;
+    line-height: 90px;
+  }
+
+  .FotoPerfil {
+    width: 629px;
+    height: 586px;
+
+    top: 554px;
+    left: 225px;
+
+    border-radius: 24px;
+
+    & img {
+      width: 636px;
+      height: 848px;
+      left: calc(50% - 636px / 2 + 0.5px);
+      top: -110px;
+    }
   }
 
   .Container {
-    gap: 35px;
+    gap: 36px;
 
-    width: calc(100% - 1100px);
-    left: 105px;
-    top: 272px;
+    width: 639px;
+    left: 960px;
+    top: 554px;
 
     & .Text {
-      gap: 20px;
-
-      & h1 {
-        font-size: 76px;
-        line-height: 90px;
-      }
+      gap: 12px;
     }
   }
 }
